<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_screen">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:columnCount="4"
        tools:context=".MainActivity"
        tools:ignore="UselessParent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:gravity="end"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tbn_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/tbn_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/divide"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/multiply"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/minus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/plus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:backgroundTint="@color/orange"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btn_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/equals" />

    </GridLayout>

</FrameLayout>
